--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "demo",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://saurabh9587.github.io/github-issue-page/",
+  "homepage": "https://saurabh9587.github.io/githubissues/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
